RESOLVED FIXED18795
REGRESSION (r32660): Text heavier with text-shadow
https://bugs.webkit.org/show_bug.cgi?id=18795
Summary REGRESSION (r32660): Text heavier with text-shadow
Matt Lilek
Reported 2008-04-28 22:58:18 PDT
After r32660, common uses of text-shadow are chunkier than they used to be - ie: the headers on <http://webkit.org/> or the group headers in the inspector's sidebars. The reduction shows that even when a shadow is completely invisible, the text is heavier.
Attachments
Eliminate extra shadowless paint (351.29 KB, patch)
2008-04-28 23:03 PDT, mitz
mjs: review+
mitz
Comment 1 2008-04-28 23:03:46 PDT
Created attachment 20883 [details] Eliminate extra shadowless paint
Maciej Stachowiak
Comment 2 2008-04-28 23:06:56 PDT
Comment on attachment 20883 [details] Eliminate extra shadowless paint r=me
mitz
Comment 3 2008-04-28 23:09:00 PDT
Note You need to log in before you can comment on or make changes to this bug.