WebCore:

Reviewed by Maciej Stachowiak.

        - fix https://bugs.webkit.org/show_bug.cgi?id=18795
          REGRESSION (r32660): Text heavier with text-shadow

        * rendering/InlineTextBox.cpp:
        (WebCore::paintTextWithShadows): The loop was doing one extra pass
        without shadow even in cases where the last pass with a shadow was
        painting the text at the right position (rather than outside the clip).
        Fixed that. The only case where a separate pass without shadow is needed
        is when there is text-stroke, since in that case all shadow passes
        paint the text outside the clip.

LayoutTests:

        Reviewed by Maciej Stachowiak.

        - updated results for https://bugs.webkit.org/show_bug.cgi?id=18795
          REGRESSION (r32660): Text heavier with text-shadow

        * platform/mac/fast/css/shadow-multiple-expected.checksum:
        * platform/mac/fast/css/shadow-multiple-expected.png:
        * platform/mac/fast/repaint/shadow-multiple-horizontal-expected.checksum:
        * platform/mac/fast/repaint/shadow-multiple-horizontal-expected.png:
        * platform/mac/fast/repaint/shadow-multiple-strict-horizontal-expected.checksum:
        * platform/mac/fast/repaint/shadow-multiple-strict-horizontal-expected.png:
        * platform/mac/fast/repaint/shadow-multiple-strict-vertical-expected.checksum:
        * platform/mac/fast/repaint/shadow-multiple-strict-vertical-expected.png:
        * platform/mac/fast/repaint/shadow-multiple-vertical-expected.checksum:
        * platform/mac/fast/repaint/shadow-multiple-vertical-expected.png:



Canonical link: https://commits.webkit.org/25943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32671 268f45cc-cd09-0410-ab3c-d52691b4dbfc